--- a/pages/animalandveterinary/event/_infographics.yaml
+++ b/pages/animalandveterinary/event/_infographics.yaml
@@ -15,8 +15,41 @@
       searchParam: 'outcome.medical_status:"Died"'
   dateConstraint:
   type: Line
-- title: "Animal Breeds"
-  short: "Specific animal breeds"
+- title: "Who reports adverse events?"
+  short: "Who reports?"
+  description:
+    - "This is the openFDA API endpoint for animal drug adverse event reports. An adverse event report is submitted to the FDA’s Center for Veterinary Medicine (CVM) to report any undesirable experience associated with the use of an animal drug, including adverse reactions, product use errors, and product/manufacturing problems."
+    - "The chart below is provided here to help illustrate how the animal drug adverse event reports data can be queried and used. You can interact with the chart by (1) selecting a different filter (which changes the search parameter) or by (2) selecting a different field from the drop down list (which changes the field used to count the results)."
+  countParam: 'type_of_information.exact'
+  filters:
+    - title: "All adverse event reports"
+      searchParam: ""
+    - title: "Reported by Owner"
+      searchParam: 'primary_reporter.exact:"Animal Owner"'
+    - title: "Reported by Veterinarian"
+      searchParam: 'primary_reporter.exact:"Veterinarian"'
+    - title: "Reported by Others"
+      searchParam: 'primary_reporter.exact:"Other"'
+  type: Bar
+- title: "Types of adverse event reports"
+  short: "Types of report"
+  description:
+    - "This is the openFDA API endpoint for animal drug adverse event reports. An adverse event report is submitted to the FDA’s Center for Veterinary Medicine (CVM) to report any undesirable experience associated with the use of an animal drug, including adverse reactions, product use errors, and product/manufacturing problems."
+    - "The chart below is provided here to help illustrate how the animal drug adverse event reports data can be queried and used. You can interact with the chart by (1) selecting a different filter (which changes the search parameter) or by (2) selecting a different field from the drop down list (which changes the field used to count the results)."
+  countParam: "type_of_information.exact"
+  filters:
+    - title: "All adverse event reports"
+      searchParam: ""
+    - title: "Reported by Owner"
+      searchParam: 'primary_reporter.exact:"Animal Owner"'
+    - title: "Reported by Veterinarian"
+      searchParam: 'primary_reporter.exact:"Veterinarian"'
+    - title: "Reported by Others"
+      searchParam: 'primary_reporter.exact:"Other"'
+  dateConstraint:
+  type: Bar
+- title: "Adverse events reports by animal breeds"
+  short: "Animal breeds"
   description:
     - "This is the openFDA API endpoint for animal drug adverse event reports. An adverse event report is submitted to the FDA’s Center for Veterinary Medicine (CVM) to report any undesirable experience associated with the use of an animal drug, including adverse reactions, product use errors, and product/manufacturing problems."
     - "The chart below is provided here to help illustrate how the animal drug adverse event reports data can be queried and used. You can interact with the chart by (1) selecting a different filter (which changes the search parameter) or by (2) selecting a different field from the drop down list (which changes the field used to count the results)."
@@ -34,7 +67,7 @@
       searchParam: 'animal.species:"Cattle"'
   dateConstraint:
   type: Bar
-- title: "Specific Reactions"
+- title: "Adverse event reports by reaction"
   short: "Reactions"
   description:
     - "This is the openFDA API endpoint for animal drug adverse event reports. An adverse event report is submitted to the FDA’s Center for Veterinary Medicine (CVM) to report any undesirable experience associated with the use of an animal drug, including adverse reactions, product use errors, and product/manufacturing problems."
@@ -43,11 +76,33 @@
   filters:
     - title: "All adverse event reports"
       searchParam: ""
-    - title: "Veddra Version 2"
-      searchParam: 'reaction.veddra_version:"2"'
-    - title: "Veddra Version 3"
-      searchParam: 'reaction.veddra_version:"3"'
-    - title: "Veddra Version 11"
-      searchParam: 'reaction.veddra_version:"11"'
+    - title: "Cats"
+      searchParam: 'animal.species:"Cat"'
+    - title: "Dogs"
+      searchParam: 'animal.species:"Dog"'
+    - title: "Horses"
+      searchParam: 'animal.species:"Horse"'
+    - title: "Cattle"
+      searchParam: 'animal.species:"Cattle"'
   dateConstraint:
+  type: Bar
+- title: "Outcomes of adverse event reports"
+  short: "Outcomes"
+  description:
+    - "This is the openFDA API endpoint for animal drug adverse event reports. An adverse event report is submitted to the FDA’s Center for Veterinary Medicine (CVM) to report any undesirable experience associated with the use of an animal drug, including adverse reactions, product use errors, and product/manufacturing problems."
+    - "The chart below is provided here to help illustrate how the animal drug adverse event reports data can be queried and used. You can interact with the chart by (1) selecting a different filter (which changes the search parameter) or by (2) selecting a different field from the drop down list (which changes the field used to count the results)."
+  countParam: 'outcome.medical_status.exact'
+  filters:
+    - title: "All adverse event reports"
+      searchParam: ""
+    - title: "Reported by Owner"
+      searchParam: 'primary_reporter.exact:"Animal Owner"'
+    - title: "Reported by Veterinarian"
+      searchParam: 'primary_reporter.exact:"Veterinarian"'
+    - title: "Treated for AE"
+      searchParam: 'treated_for_ae:"Yes"'
+    - title: "Previous Exposure to Drug"
+      searchParam: 'drug.previous_exposure_to_drug:"Yes"'
+    - title: "Previous Adverse Event to Drug"
+      searchParam: 'drug.previous_ae_to_drug:"Yes"'
   type: Bar
