--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-datetime": "^2.14.0",
     "react-day-picker": "^7.1.1",
     "react-document-title": "^2.0.3",
+    "react-dom": "15.4.2",
     "react-highlight": "^0.10.0",
     "react-modal": "^3.1.0",
     "react-promise": "^2.0.0",
@@ -74,7 +75,8 @@
     "scroll-into-view": "^1.9.1",
     "stylus": "^0.54.5",
     "whatwg-fetch": "2.0.3",
-    "with-query": "1.0.2"
+    "with-query": "1.0.2",
+    "xlsx": "^0.12.12"
   },
   "keywords": [
     "gatsby"
