--- a/src/pages/data/dataexplorer/_datasets.yaml
+++ b/src/pages/data/dataexplorer/_datasets.yaml
@@ -218,11 +218,14 @@ names:
             show: true
             showDefault: true
             type: date
-          - Header: NDC
-            accessor: openfda.product_ndc
+          - Header: Product Type
+            accessor: openfda.product_type
             show: true
             showDefault: true
-            split: true
+          - Header: Manufacturer Name
+            accessor: openfda.manufacturer_name
+            show: true
+            showDefault: true
           - Header: Brand Name
             accessor: openfda.brand_name
             show: true
@@ -234,6 +237,31 @@ names:
             showDefault: true
             split: true
             startCase: true
+          - Header: Substance Name
+            accessor: openfda.substance_name
+            show: true
+            showDefault: false
+            split: true
+          - Header: Inactive Ingredients
+            accessor: inactive_ingredient
+            show: true
+            showDefault: true
+            filter_values:
+              - Also Contains
+              - Also Contain
+              - Contains
+              - Contain
+              - Inactive Ingredients
+              - Inactive Ingredient
+              - Other Ingredients
+              - Other Ingredient
+            split: true
+            startCase: true
+          - Header: NDC
+            accessor: openfda.product_ndc
+            show: true
+            showDefault: true
+            split: true
           - Header: Active Ingredients
             accessor: active_ingredient
             filter_values:
@@ -253,25 +281,6 @@ names:
             showDefault: true
             split: true
             startCase: true
-          - Header: Inactive Ingredients
-            accessor: inactive_ingredient
-            show: true
-            showDefault: true
-            filter_values:
-              - Also Contains
-              - Also Contain
-              - Contains
-              - Contain
-              - Inactive Ingredients
-              - Inactive Ingredient
-              - Other Ingredients
-              - Other Ingredient
-            split: true
-            startCase: true
-          - Header: Product Type
-            accessor: openfda.product_type
-            show: true
-            showDefault: true
           - Header: Purpose
             accessor: purpose
             show: false
@@ -296,11 +305,6 @@ names:
             accessor: openfda.spl_id
             show: false
             showDefault: false
-          - Header: Substance Name
-            accessor: openfda.substance_name
-            show: false
-            showDefault: false
-            split: true
           - Header: Route
             accessor: route
             show: false
@@ -314,10 +318,6 @@ names:
             show: false
           - Header: SPL Set ID
             accessor: openfda.spl_set_id
-            show: false
-            showDefault: false
-          - Header: Manufacturer Name
-            accessor: openfda.manufacturer_name
             show: false
             showDefault: false
           - Header: UNII
@@ -355,28 +355,45 @@ names:
     url: http://ec2-34-238-202-4.compute-1.amazonaws.com:8000
     filters:
       options:
-        - label: Effective Time
+        - label: Time Period
           type: yearpicker
           start_year: 1994
           field: effective_time
           query_type: range
           placeholder: Select Time Period
-        - label: Inactive Ingredients
-          field: inactive_ingredient
-          type: free_text
-          query_type: match
-          remove_chars: inactive ingredients
-          placeholder: Type Inactive Ingredient
-          limit: 100
-        - label: Substance Name
-          field: openfda.substance_name_exact
-          autocomplete_field: openfda.substance_name
-          type: select_autocomplete
-          remove_chars: active ingredients
-          can_query: true
-          placeholder: Search Substance Name
+        - label: Product type
+          type: checkbox
           query_type: term
-          limit: 100
+          field: openfda.product_type_exact
+          options:
+            - label: Over the counter
+              value: OTC ANIMAL DRUG
+            - label: OTC type A
+              value: OTC TYPE A MEDICATED ARTICLE ANIMAL DRUG
+            - label: OTC type C
+              value: OTC TYPE C MEDICATED FEED ANIMAL DRUG
+            - label: Prescription
+              value: PRESCRIPTION ANIMAL DRUG
+            - label: VFD type A
+              value: VFD TYPE A MEDICATED ARTICLE ANIMAL DRUG
+        - label: Marketing Category
+          type: checkbox
+          query_type: prefix
+          field: openfda.application_number
+          options:
+            - label: NADA
+              value: nada
+            - label: ANADA
+              value: anada
+        - label: Drug Approval Status
+          type: boolean
+          field: openfda.application_number
+          query_type: exists
+          options:
+            - label: Approved
+              value: true
+            - label: Unapproved
+              value: false
         - label: Brand Name
           field: openfda.brand_name_exact
           autocomplete_field: openfda.brand_name
@@ -401,6 +418,22 @@ names:
           placeholder: Search Manufacturer Name
           limit: 100
           can_query: true
+        - label: Substance Name
+          field: openfda.substance_name_exact
+          autocomplete_field: openfda.substance_name
+          type: select_autocomplete
+          remove_chars: active ingredients
+          can_query: true
+          placeholder: Search Substance Name
+          query_type: term
+          limit: 100
+        - label: Inactive Ingredients
+          field: inactive_ingredient
+          type: free_text
+          query_type: match
+          remove_chars: inactive ingredients
+          placeholder: Type Inactive Ingredient
+          limit: 100
         - label: NDC Code
           type: select_autocomplete
           can_query: true
@@ -417,30 +450,7 @@ names:
           autocomplete_field: openfda.application_number
           placeholder: E.g. ANADA200224
           limit: 100
-        - label: Product type
-          type: checkbox
-          query_type: term
-          field: openfda.product_type_exact
-          options:
-              - label: Over the counter
-                value: OTC ANIMAL DRUG
-              - label: OTC type A
-                value: OTC TYPE A MEDICATED ARTICLE ANIMAL DRUG
-              - label: OTC type C
-                value: OTC TYPE C MEDICATED FEED ANIMAL DRUG
-              - label: Prescription
-                value: PRESCRIPTION ANIMAL DRUG
-              - label: VFD type A
-                value: VFD TYPE A MEDICATED ARTICLE ANIMAL DRUG
-        - label: Drug Approval Status
-          type: boolean
-          field: openfda.application_number
-          query_type: exists
-          options:
-              - label: Approved
-                value: true
-              - label: Unapproved
-                value: false
+
     exportOptions:
       - label: CSV
       - label: JSON
