Fixed JSON typo.

--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "recharts": "1.0.0-beta.0",
     "scroll-into-view": "^1.9.1",
     "stylus": "^0.54.5",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
     "victory": "0.26.1",
     "whatwg-fetch": "2.0.3",
     "with-query": "1.0.2",
