Final merge fixes.

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "moment": "2.20.1",
     "nib": "^1.1.2",
     "nivo": "git+ssh://git@github.com:debovis/nivo.git#add_template_label_heatmap1",
+    "pandas-js": "0.2.4",
     "pondjs": "0.8.7",
     "rc-checkbox": "2.1.4",
     "rc-slider": "8.3.1",
@@ -69,6 +70,7 @@
     "react-radio-group": "^3.0.2",
     "react-select": "^1.2.1",
     "react-sticky-state": "^2.1.9",
+    "react-table": "6.7.4",
     "react-timeseries-charts": "0.12.8",
     "react-transition-group": "^2.2.1",
     "recharts": "1.0.0-beta.0",
