--- a/src/pages/apis/doc-links.yaml
+++ b/src/pages/apis/doc-links.yaml
@@ -64,6 +64,24 @@
           link: /apis/animalandveterinary/event/download/
         - title: Searchable fields
           link: /apis/animalandveterinary/event/searchable-fields/
+    - title: Product Labeling
+      id: animalandveterinary-product-labeling
+      collapse: true
+      items:
+        - title: Overview
+          link: /apis/animalandveterinary/label/
+        - title: How to use the API
+          link: /apis/animalandveterinary/label/how-to-use-the-endpoint/
+        - title: Example API queries
+          link: /apis/animalandveterinary/label/example-api-queries/
+        - title: Explore the API with an interactive chart
+          link: /apis/animalandveterinary/label/explore-the-api-with-an-interactive-chart/
+        - title: Understanding the API Results
+          link: /apis/animalandveterinary/label/understanding-the-api-results/
+        - title: Download the dataset
+          link: /apis/animalandveterinary/label/download/
+        - title: Searchable fields
+          link: /apis/animalandveterinary/label/searchable-fields
 
 - title: Drug API Endpoints
   id: drug-api-endpoints
