--- a/src/pages/apis/doc-links.yaml
+++ b/src/pages/apis/doc-links.yaml
@@ -39,6 +39,48 @@
   - title: Download API fields
     link: /apis/download-api-fields/
 
+- title: Animal & Veterinary API Endpoints
+  id: animalandveterinary-api-endpoints
+  link: /animalandveterinary/
+  collapse: true
+  items:
+    - title: Product Labeling
+      id: animalandveterinary-product-labeling
+      collapse: true
+      items:
+        - title: Overview
+          link: /apis/animalandveterinary/label/
+        - title: How to use the API
+          link: /apis/animalandveterinary/label/how-to-use-the-endpoint/
+        - title: Example API queries
+          link: /apis/animalandveterinary/label/example-api-queries/
+        - title: Explore the API with an interactive chart
+          link: /apis/animalandveterinary/label/explore-the-api-with-an-interactive-chart/
+        - title: Understanding the API Results
+          link: /apis/animalandveterinary/label/understanding-the-api-results/
+        - title: Download the dataset
+          link: /apis/animalandveterinary/label/download/
+        - title: Searchable fields
+          link: /apis/animalandveterinary/label/searchable-fields
+    - title: Pet Food Reports
+      id: animalandveterinary-pet-food-reports
+      collapse: true
+      items:
+        - title: Overview
+          link: /apis/animalandveterinary/petfood_reports/
+        - title: How to use the API
+          link: /apis/animalandveterinary/petfood_reports/how-to-use-the-endpoint/
+        - title: Example API queries
+          link: /apis/animalandveterinary/petfood_reports/example-api-queries/
+        - title: Explore the API with an interactive chart
+          link: /apis/animalandveterinary/petfood_reports/explore-the-api-with-an-interactive-chart/
+        - title: Understanding the API Results
+          link: /apis/animalandveterinary/petfood_reports/understanding-the-api-results/
+        - title: Download the dataset
+          link: /apis/animalandveterinary/petfood_reports/download/
+        - title: Searchable fields
+          link: /apis/animalandveterinary/petfood_reports/searchable-fields
+
 - title: Drug API Endpoints
   id: drug-api-endpoints
   link: /drug/
