FDA-258 Added Phish-Pharm endpoint pages.

--- a/src/pages/apis/animalandveterinary/label/_meta.yaml
+++ b/src/pages/apis/animalandveterinary/label/_meta.yaml
@@ -6,7 +6,7 @@ datasets:
 label: Animal Drug Labeling
 title: Animal Drug Labeling
 path: /apis/animalandveterinary/label
-api_path: /Animal Drug Labeling/label
+api_path: /animalandveterinary/label
 start: 20090601
 status: animalandveterinarylabel
 dateConstraintKey: effective_time
