--- a/src/pages/apis/doc-links.yaml
+++ b/src/pages/apis/doc-links.yaml
@@ -80,6 +80,24 @@
           link: /apis/animalandveterinary/petfood_reports/download/
         - title: Searchable fields
           link: /apis/animalandveterinary/petfood_reports/searchable-fields
+    - title: Phish-Pharm
+      id: animalandveterinary-phish-pharm
+      collapse: true
+      items:
+        - title: Overview
+          link: /apis/animalandveterinary/phishpharm/
+        - title: How to use the API
+          link: /apis/animalandveterinary/phishpharm/how-to-use-the-endpoint/
+        - title: Example API queries
+          link: /apis/animalandveterinary/phishpharm/example-api-queries/
+        - title: Explore the API with an interactive chart
+          link: /apis/animalandveterinary/phishpharm/explore-the-api-with-an-interactive-chart/
+        - title: Understanding the API Results
+          link: /apis/animalandveterinary/phishpharm/understanding-the-api-results/
+        - title: Download the dataset
+          link: /apis/animalandveterinary/phishpharm/download/
+        - title: Searchable fields
+          link: /apis/animalandveterinary/phishpharm/searchable-fields
 
 - title: Drug API Endpoints
   id: drug-api-endpoints
