FDA-307, FDA-354 Added help text to Phish-Pharm & Pet Foods.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "eslint-plugin-react": "^7.4.0",
     "file-saver": "1.3.3",
     "flow": "^0.2.3",
-    "gatsby": "1.9.123",
+    "gatsby": "^1.9.277",
     "gatsby-link": "1.6.22",
     "gatsby-plugin-react-helmet": "1.0.8",
     "gatsby-plugin-stylus": "1.1.10",
@@ -50,7 +50,6 @@
     "matchmedia": "^0.1.2",
     "moment": "2.20.1",
     "nib": "^1.1.2",
-    "nivo": "git+ssh://git@github.com:debovis/nivo.git#add_template_label_heatmap1",
     "pandas-js": "0.2.4",
     "pondjs": "0.8.7",
     "rc-checkbox": "2.1.4",
@@ -60,7 +59,6 @@
     "react-chartjs": "^0.8.0",
     "react-collapsible": "^2.0.4",
     "react-custom-scrollbars": "^4.2.1",
-    "react-datamaps": "git+ssh://git@github.com:debovis/react-datamaps.git",
     "react-datetime": "^2.14.0",
     "react-day-picker": "^7.1.1",
     "react-document-title": "^2.0.3",
